draft week 8 personal assignment
